# stock_market_demo

./: .env.example  .gitignore  CLAUDE.md  FORHARSH.md  README.md  ROADMAP.md  alembic.ini  create_topics.sh  demo_file.py  docker-compose.yml  pyproject.toml
api/: Dockerfile  alerts_consumer.py  database.py  db_consumer.py  main.py  models.py  portfolio_service.py  requirements.txt  strategy_engine.py  valuation_consumer.py
api/alembic/: env.py
api/alembic/versions/: 001_create_tables.py  002_add_portfolio_tables.py  003_add_strategy_alert_tables.py
consumers/: .dockerignore  Dockerfile  aggregator_consumer.py  requirements.txt  simple_consumer.py  storage_consumer.py
producer/: .dockerignore  Dockerfile  producer.py  requirements.txt  websocket_handler.py
shared/: healthcheck.py
tests/: conftest.py  test_aggregator.py  test_api.py  test_db_consumer.py  test_healthcheck.py  test_portfolio.py  test_serialization.py  test_strategy.py
