[project]
name = "stock-market-streaming"
version = "0.1.0"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "SIM108", "SIM113", "SIM105", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["producer", "consumers", "api", "shared"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["producer", "consumers"]
